src/App.css
.fb-6 {
  flex-basis: calc(100% / 6);
}

.fb-5 {
  flex-basis: 20%;
}

.fb-4 {
  flex-basis: 25%;
}

.fb-3 {
  flex-basis: calc(100% / 3);
}

.fb-2 {
  flex-basis: 50%;
}

.fb-1 {
  flex-basis: 100%;
}

.flex-container {
  display: flex;
  flex-flow: row wrap;
  width: 100%;
  color: #fff;
}

.flex-container > div {
  display: flex;
  flex-basis: calc(100% / 3);
  justify-content: center;
  align-items: center;
  height: calc(100vh / 3);
}

.flex-container > .days,
.flex-container > .t-days {
  font-family: "sutro-shaded-primary", sans-serif;
  font-size: 10vw;
}

.flex-container > .days {
  background: royalblue;
  text-shadow: 3px 3px mediumspringgreen;
}

.flex-container > .powers,
.flex-container > .countdown {
  flex-basis: calc(100% / 3 * 2);
  flex-flow: row wrap;
}

.flex-container > .powers {
  background: deepskyblue;
}

.flex-container > .powers > div {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 25vh;
  font-size: 6.5vw;
  text-shadow: 3px 3px lightcoral;
}

.flex-container > .powers > div sup {
  font-size: 55%;
  margin: -2.5rem 0 0 0.2rem;
}

.flex-container > .powers > div::before {
  position: absolute;
  left: -0.25em;
  content: '+';
  font-size: 5vw;
}

.flex-container > .powers > div:first-of-type::before {
  content: '=';
}

.flex-container > .t-days {
  background: #52A182;
  text-shadow: 3px 3px #2a8762;
}

.flex-container > .t-powers {
  background: #E29276;
}

.flex-container > .t-powers > div {
  text-shadow: 3px 3px rgb(78, 139, 209);
}

.flex-container > .countdown {
  background: gold;
  font-size: 4vw;
  text-shadow: 3px 3px orchid;
  align-items: center;
  align-content: center;
}

.flex-container > .countdown > div {
  flex-basis: 100%;
  text-align: center;
}

.flex-container > .countdown > .time {
  font-size: 8.5vw;
}

.flex-container > .forest {
  font-family: "sutro-shaded-primary", sans-serif;
  font-size: 8vw;
  background: forestgreen;
  text-shadow: 3px 3px mediumspringgreen;
}

.flex-container > .forest::before {
  display: block;
  font-size: 80%;
  margin: 0.5rem 0.35rem 0 0;
  content: '🌲';
}

